--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,19 @@
 ul.list-group {
   min-height: 130px;
 }
+body {
+  font-family: "Open Sans", sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Staatliches", sans-serif;
+}
+#big-check {
+  font-size: 80px;
+  tex
+}
